# POPL

./: README.md
code-external/: fannkuch-redux.go  fib.go
code-orig/: fannkuch-redux.go  fib.go
doc/: README.md
go/: RequestTimes.xlsx  build.ninja  fib.go  go-vs-rust  go.mod  go.sum
results/: RequestTimes_Go.xlsx  RequestTimes_Rust.xlsx  goredux.xlsx  rustredux.xlsx
rust/: Cargo.toml
rust/src/: fannkuch-redux  fannkuch-redux.rs  fib.rs  loadtester.rs
tests/: tests.txt
